Added the instagram widget

--- a/index.html
+++ b/index.html
@@ -47,6 +47,17 @@
 
         <div class="container">
             <h1><a href="index.html">Sana in Eorzea</a></h1>
+
+            <div class="row">
+                <!--<div class="col-md-5">
+                    <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/Bk5bKuhhVy5/" data-instgrm-version="8" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:658px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);"></blockquote> <script async defer src="//www.instagram.com/embed.js"></script> -->
+        
+                <div class="col-md-6" style="padding:0">
+                    <a href="https://www.instagram.com/sanatheaura/" id="link-008d08eeb3c30b752eb8fdbe132a0ee6a96b062774b636fc32218eba20a0e00b">@sanatheaura</a>
+                    <script src="https://instawidget.net/js/instawidget.js?u=008d08eeb3c30b752eb8fdbe132a0ee6a96b062774b636fc32218eba20a0e00b&width=100%"></script>
+                </div> <!-- InstaWidget -->
+                <div class="col-md-6"></div>
+            </div>
         </div>
 
         <nav class="nav" id="bottomMenu" role="navigation">
